--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <ul>
         <li><strong>IP:</strong> en el servidor de discord</li>
-        <li><strong>Versión:</strong> Minecraft 1.20.1 Fabric</li>
+        <li><strong>Versión:</strong> Minecraft 1.20.1 Forge</li>
         <li><strong>Mods:</strong> TaCZ, Create, etc.</li>
         <li><strong>RAM recomendada:</strong> 4–6 GB</li>
       </ul>
