Actualización: sección de meta + botón PayPal

--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
       </ul>
 
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      
+<!-- META DE HOSTEO -->
+    <section id="hosteo-meta">
+      <h2>Meta mensual del servidor</h2>
+
+      <br><br>
+
+        <p style="margin-top:10px;">
+        Necesitamos <strong>23.50 €</strong> al mes para mantener el servidor online.<br><br> Si quieres ayudar al mantenimiento del servidor, ¡cualquier aporte es bienvenido ❤️!
+        </p>
+
+        <br><br><br><br><br><br><br>
+
+      <!-- BOTÓN PAYPAL BRONX STYLE -->
+      <a id="paypal-bronx" href="https://www.paypal.com/donate/?hosted_button_id=BX4E8XUR2WCP4" target="_blank">
+        <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" alt="">
+        Donar para el servidor
+        </a>
+
+    </section>
+
+<br><br><br><br><br>
+
+
+<br><br><br><br><br>
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
       <h3 style="margin-top: 40px;">Galería de los Mods</h3>
 
