Actualizado enlace a modpack v1.5

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </label>
 
       <!-- LINK DIRECTO GITHUB IMPLEMENTADO -->
-      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.0/BRONX25.zip">
-        Descargar Modpack
+      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.5/BRONX.25-26.zip">
+        Descargar Modpack (v1.5)
       </a>
     </section>
 
