--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </label>
 
       <!-- LINK DIRECTO GITHUB IMPLEMENTADO -->
-      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.5/BRONX.25-26.zip">
+      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.7/BRONX25v1x7.zipgit add .
+
+">
         Descargar Modpack (v1.5)
       </a>
     </section>
