--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       </label>
 
       <!-- LINK DIRECTO GITHUB IMPLEMENTADO -->
-      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.7/BRONX25v1x7.zipgit add .
-
+      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.7/BRONX25v1x7.zip
 ">
-        Descargar Modpack (v1.5)
+        Descargar Modpack (v1.7)
       </a>
     </section>
 
