Añadida página mundo.html + botón de retorno anclado

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
       </a>
     </section>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
+    <div id="mundo-anchor" class="descubre-container">
+      <a class="btn" href="mundo.html">Descubre el mundo aquí</a>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <section>
       <h2>Información del Servidor</h2>
@@ -59,7 +63,7 @@
       <br><br>
 
         <p style="margin-top:10px;">
-        Necesitamos <strong>11.75 €</strong> al mes para mantener el servidor online.<br><br> Si quieres ayudar al mantenimiento del servidor, ¡cualquier aporte es bienvenido ❤️!
+        Necesitamos <strong>8.24 €</strong> al mes para mantener el servidor online.<br><br> Si quieres ayudar al mantenimiento del servidor, ¡cualquier aporte es bienvenido ❤️!
         </p>
 
         <br><br><br><br><br><br><br>
@@ -71,12 +75,6 @@
         </a>
 
     </section>
-
-<br><br><br><br><br>
-
-
-<br><br><br><br><br>
-
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
