Añadido estado del servidor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
         <li><strong>RAM recomendada:</strong> 4–6 GB</li>
       </ul>
 
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br><br><br>
+      <section id="server-status">
+        <h2>Estado del Servidor</h2>
+        <br>
+        <p id="status-text" class="online">● Online</p>
+      </section>
+      <br><br><br><br><br><br><br><br><br><br>
       
 <!-- META DE HOSTEO -->
     <section id="hosteo-meta">
