--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
 ">
         Descargar Modpack (v1.7)
       </a>
+        <br><br>
+      <a class="btn-forge" id="forge-btn" href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.10/forge-1.20.1-47.4.10-installer.jar">
+        Descargar Forge <br>(versión necesaria)
+      </a>
     </section>
 
     <br><br><br><br><br><br><br><br><br>
     <div id="mundo-anchor" class="descubre-container">
       <a class="btn" href="mundo.html">Descubre el mundo aquí</a>
     </div>
+
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <section>
