--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       </label>
 
       <!-- LINK DIRECTO GITHUB IMPLEMENTADO -->
-      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.7/BRONX25v1x7.zip
-">
+      <a class="btn disabled" id="download-btn" href="https://github.com/TegoFumaron/Bronx25/releases/download/v1.8/BRONX25v1x8.zip">
         Descargar Modpack (v1.7)
       </a>
         <br><br>
